tsc C and header files included in the main

--- a/Linear Touch Sensor/TSC_test/MDK-ARM/TSC_test/TSC_test.build_log.htm
+++ b/Linear Touch Sensor/TSC_test/MDK-ARM/TSC_test/TSC_test.build_log.htm
@@ -21,15 +21,33 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.2.0.0
 Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
-C:\Users\Juan David Venegas S\Desktop\U of U\Spring 2024\ECE 6780\Labs\TSC_test\MDK-ARM\TSC_test.uvprojx
-Project File Date:  04/17/2024
+C:\Users\Juan David Venegas S\Desktop\U of U\Spring 2024\ECE 6780\Labs\Mini_Project\ECE6780_MiniProject\Linear Touch Sensor\TSC_test\MDK-ARM\TSC_test.uvprojx
+Project File Date:  04/19/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Build target 'TSC_test'
+compiling stm32f0xx_hal_msp.c...
+compiling stm32f0xx_hal_gpio.c...
+compiling stm32f0xx_hal_tim_ex.c...
+compiling stm32f0xx_hal_dma.c...
+compiling tsc.c...
+compiling stm32f0xx_hal_tim.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal.c...
 compiling main.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_flash.c...
+compiling stm32f0xx_hal_flash_ex.c...
+compiling system_stm32f0xx.c...
+compiling stm32f0xx_hal_exti.c...
+compiling stm32f0xx_hal_i2c.c...
 linking...
-Program Size: Code=3738 RO-data=274 RW-data=12 ZI-data=1644  
+Program Size: Code=4554 RO-data=346 RW-data=12 ZI-data=1644  
 FromELF: creating hex file...
 "TSC_test\TSC_test.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +72,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE@5.6.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
